# cssimpler

./: Cargo.toml  README.md  rustc-ice-2026-04-04T20_02_49-7840.txt
app/: Cargo.toml
app/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: color.rs  custom_properties.rs  dom.rs  extracted_scene.rs  fonts.rs  generated_content.rs  interaction.rs  lib.rs  runtime_ecs.rs  scrollbar.rs  static_desc.rs  svg.rs  transitions.rs
doc/: optimizations_specsheet.md  specsheet.md  specsheet_glass.md  specsheet_pt2.md  specsheet_pt3.md
docs/: README.md  human_notes.md  specsheet.md
examples/: backdrop_blur.css  backdrop_blur.rs  collapsible_sidebar.css  collapsible_sidebar.rs  demo.css  demo.rs  drop_shadow.css  drop_shadow.rs  glass_color_picker.css  glass_color_picker.rs  glass_drawer.css  glass_drawer.rs  gradient_gallery.css  gradient_gallery.rs  gui_effect_pressure.css  gui_effect_pressure.rs  gui_effect_pressure_fragment.rs  gui_effect_pressure_gpu.rs  gui_effect_pressure_prefab.rs  powerline_typography.css  powerline_typography.rs  taffy_layout.css  taffy_layout.rs  text_render_stress.css  text_render_stress.rs  transform_3d_playground.css  transform_3d_playground.rs  uiverse_card.css  uiverse_hover_button.css  uiverse_hover_button.rs  uiverse_hover_button_gpu.rs  uiverse_hover_button_prefab.rs
examples/assets/: README.md
macro/: Cargo.toml
macro/src/: baked_stylesheet.rs  lib.rs  ui_markup.rs
renderer/: Cargo.toml
renderer/src/: backdrop.rs  color.rs  fonts.rs  gpu.rs  gpu.wgsl  gradient.rs  input.rs  lib.rs  native_glass.rs  runtime.rs  scrollbar.rs  shadow.rs  shapes.rs  softbuffer_dither.rs  svg.rs  transform.rs
src/: app.rs  baked_macro_tests.rs  lib.rs  ui_macro_tests.rs
src/app/: scene_transition.rs
style/: Cargo.toml
style/src/: attributes.rs  const_finalize.rs  custom_properties.rs  fonts.rs  invalidation.rs  lib.rs  render_tree.rs  selectors.rs  static_desc.rs  svg.rs  transitions.rs  variable_resolution.rs
style/src/visual/: backdrop.rs  border.rs  color.rs  glass.rs  gradient.rs  mod.rs  scrollbar.rs  shadow.rs  svg.rs  transform.rs
