[workspace]
members = ["app", "core", "renderer", "style", "macro"]
default-members = ["app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
cssimpler-core = { path = "core" }
cssimpler-renderer = { path = "renderer" }
cssimpler-style = { path = "style" }
cssimpler-macro = { path = "macro" }
anyhow = "1"
font8x8 = "0.3"
minifb = "0.27"
taffy = "0.7"
