[package]
name = "cssimpler"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["core", "renderer", "style", "macro"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
cssimpler-core = { path = "core" }
cssimpler-renderer = { path = "renderer" }
cssimpler-style = { path = "style" }
cssimpler-macro = { path = "macro" }
anyhow = "1"
font8x8 = "0.3"
lightningcss = "1.0.0-alpha.70"
minifb = "0.27"
taffy = "0.7"

[dependencies]
anyhow.workspace = true
cssimpler-core.workspace = true
cssimpler-macro.workspace = true
cssimpler-renderer.workspace = true
cssimpler-style.workspace = true
