[package]
name = "cssimpler"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["core", "renderer", "style", "macro"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
cssimpler-core = { path = "core" }
cssimpler-renderer = { path = "renderer" }
cssimpler-style = { path = "style" }
cssimpler-macro = { path = "macro" }
ab_glyph = "0.2.32"
anyhow = "1"
font8x8 = "0.3"
fontdb = "0.23.0"
lightningcss = "1.0.0-alpha.70"
softbuffer = "0.4.8"
taffy = "0.7"
cssparser = "0.33.0"
winit = "0.30.13"

[dependencies]
anyhow.workspace = true
cssimpler-core.workspace = true
cssimpler-macro.workspace = true
cssimpler-renderer.workspace = true
cssimpler-style.workspace = true
