[package]
name = "cssimpler-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
ab_glyph.workspace = true
bytemuck.workspace = true
cssimpler-core.workspace = true
font8x8.workspace = true
pollster.workspace = true
softbuffer.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
