[package]
name = "cssimpler-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
ab_glyph.workspace = true
cssimpler-core.workspace = true
font8x8.workspace = true
softbuffer.workspace = true
winit.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }
